# realmd

./: .gitignore  COPYING  ChangeLog  Makefile.am  Makefile.decl  NEWS  README  autogen.sh  configure.ac
dbus/: Makefile.am  org.freedesktop.realmd.Samba.provider  org.freedesktop.realmd.Samba.service.in  org.freedesktop.realmd.SssdAd.provider  org.freedesktop.realmd.SssdIpa.provider  org.freedesktop.realmd.SssdIpa.service.in  org.freedesktop.realmd.conf  org.freedesktop.realmd.service.in  org.freedesktop.realmd.xml  org.freedesktop.systemd1.xml  realm-dbus-constants.h  realm-dbus-generated.c  realm-dbus-generated.h  realmd.service.in
doc/: Makefile.am  escape-xml-to-text.xsl  html.css  realm.1  realm.xml  realmd-docs.sgml  realmd-guide-active-directory.xml  realmd-guide-configuring.xml  realmd-guide-freeipa.xml  realmd-guide-kerberos.xml
doc/internals/: Makefile.am  docbook-params.xsl  realmd-internals.xml
doc/manual/: Makefile.am  gdbus-fix-bugs.xsl  gtk-doc.xsl  html.css  realm.xml  realmd-docs.sgml  realmd-docs.xml  realmd-guide-active-directory.xml  realmd-guide-configuring.xml  realmd-guide-freeipa.xml  realmd-guide-ipa.xml  realmd-guide-kerberos.xml  realmd.conf.xml
doc/manual/static/: style.css
doc/website/: Makefile.am  jinja2-build.py
doc/website/content/: base.html  contribute.html  index.html  style.css
po/: LINGUAS  POTFILES.in  ar.po  as.po  az.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_CL.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  it_IT.po  ja.po  ka.po  kk.po  kn.po  ko.po  (+31 more)
service/: Makefile.am  ad-provider-smb.conf  ad-provider-sssd  egg-task.c  egg-task.h  ic-ad-discover.c  ic-ad-discover.h  ic-ad-enroll.c  ic-ad-enroll.h  ic-ad-provider.c  ic-ad-provider.h  ic-ad-sssd.c  ic-ad-sssd.h  ic-ads-provider.c  ic-ads-provider.h  ic-command.c  ic-command.h  ic-dbus-constants.h  ic-dbus-generated.c  ic-dbus-generated.h  ic-debug.c  ic-debug.h  ic-diagnostics.c  ic-diagnostics.h  ic-discovery.c  ic-discovery.h  ic-errors.c  ic-errors.h  ic-kerberos-provider.c  ic-kerberos-provider.h  ic-main.c  ic-packages.c  ic-packages.h  ic-service.c  ic-service.h  ic-unix-process.c  ic-unix-process.h  org.freedesktop.IdentityConfig.xml  org.freedesktop.realmd.ActiveDirectory.conf  org.freedesktop.realmd.conf  (+129 more)
tests/: Makefile.am  change-permitted.py  discover-ad-realm  discover-python.py  enroll-machine.py  frob-install-packages.c  frob-package-set.c  provider-props.py  release-daemon.py  service-list.py  test-dn-util.c  test-ini-config.c  test-login-name.c  test-safe-format.c  test-safe-printf.c  test-samba-config.c  test-samba-ou-format.c  test-settings.c  test-sssd-config.c
tests/files/: realmd-defaults.conf  realmd-distro.conf  smb-one.conf
tools/: Makefile.am  eggdbusobjectmanagerclient.c  eggdbusobjectmanagerclient.h  eggdbusobjectproxy.c  eggdbusobjectproxy.h  realm-client.c  realm-client.h  realm-discover.c  realm-enroll.c  realm-join.c  realm-leave.c  realm-logins.c  realm.c  realm.h
